--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('./images/bg-mobile.svg');
+    background-image: url('../images/bg-mobile.svg');
     background-repeat: no-repeat;
     background-size: 100%;
     background-color: #674caf;
@@ -55,7 +55,7 @@ p {
 
 @media(min-width:850px){
     body{
-        background-image: url('./images/bg-desktop.svg');
+        background-image: url('../images/bg-desktop.svg');
     }
 
     header {
